# mlx-knife

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HUGGINGFACE_LOCK_ISSUES.md  MIGRATION.md  README.md  SECURITY.md  TESTING-DETAILS.md  TESTING.md  chatbox.html  commit_message_beta3.md  debug_lock_cleanup.py  mlx_demo_recorder.py  mlxk-demo.tape  mondlandung.html  mondlandung.py  mondlandung2.html  pyproject-mlxk-json.toml  pyproject.toml  pytest.ini  requirements.txt  settings.json  simple_chat.html  test-multi-python.sh
.claude/agents/: code-reviewer.md
.github/: FUNDING.yml
.github/workflows/: tests.yml
benchmarks/: README.md  TESTING.md  generate_benchmark_report.py  validate_reports.py
benchmarks/reports/: BENCHMARK-v1.0-2.0.4b3-2025-12-20.md  BENCHMARK-v1.1-2.0.4-2026-02-11-wet-benchmark-2.0.4-stable.md  README.md  example-2025-11-16-v2.0.2.jsonl
benchmarks/schemas/: MIGRATIONS.md  report-current.schema.json  report-v0.1.schema.json  report-v0.2.1.schema.json  report-v0.2.2.schema.json  report-v0.2.schema.json
benchmarks/tools/: memmon.py  memplot.py
docs/: 2.0-IMPLEMENTATION-GUIDE.md  2.0-TEST-SPECIFICATIONS.md  ARCHITECTURE.md  MLX-Knife-2.0-Versioning-Strategy.md  MODEL-COVERAGE.md  README-2.0-Handbook-Plan.md  RUNTIME-FEATURES.md  SERVER-HANDBOOK.md  TODO-issue-26-embeddings.md  awni-hannun-questions.md  issue-26-summary.md  json-api-schema.json  json-api-specification.md  model-capabilities-extension-plan.md  model-naming-specification.md  session-2b-status.md
docs/ADR/: ADR-001-json-api-strategy.md  ADR-002-edge-cases.md  ADR-003-Server-Run-Port-to-2.0.md  ADR-004-Enhanced-Error-Logging.md  ADR-005-Clone-Implementation-Beta3.md  ADR-006-Clone-Implementation-Revised.md  ADR-007-Clone-Implementation-Fixed.md  ADR-009-Stop-Token-Detection-Fix.md  ADR-011-E2E-Live-Test-Architecture.md  ADR-012-Vision-Support-Roadmap.md  ADR-014-Unix-Pipe-Integration.md  ADR-015-Embeddings-API.md  ADR-016-Memory-Aware-Model-Loading.md  ADR-018-Convert-Operation.md  ADR-019-Audio-Input-Support-beta8.md  ADR-019-Audio-Input-Support.md  ADR-020-Audio-Backend-Architecture.md  ADR-021-MCP-Integration.md  ADR-022-Workspace-First-Paradigm.md  ADR-023-Text-First-Verified-Multimodal.md  ADR-024-Pre-Execution-Capability-Mismatch-Reject.md  ADR-025-content-hash-v2.md  ADR-026-Model-Location-Dispatcher.md  README.md
docs/development/: 2.0-implementation-plan.md  refactoring-analysis.md
examples/: README.md  aetheria-mindmap.html  aetheria-sequence-broadcast.html  mindmap.mermaid  trilogy.html
examples/model-routing/: README.md  route.py  routing.json
examples/pipes/: README.md  mlx-tee.py  vision_pipe.sh
examples/rag-server/: README.md  cosine-search.py  index-files.py  rag-pipeline.sh  rag-server.py  retrieve-files.py
mlx-knife_PR/: 18.August 2025 mlx-knife PR Timeline.md  timeline_data.json  timeline_styles.css
mlx_knife/: __init__.py  cache_utils.py  cli.py  mlx_runner.py
mlxk2/: NOTICE  __init__.py  cli.py  errors.py  logging.py  spec.py
mlxk2/audio/: __init__.py  whisper_tokenizer.py
mlxk2/core/: audio_runner.py  cache.py  capabilities.py  embed_server_base.py  embedding_runner.py  model_resolution.py  server_base.py  vision_runner.py
mlxk2/operations/: clone.py  common.py  convert.py  embed.py  embed_serve.py  health.py  list.py  pull.py  push.py  rm.py  run.py  serve.py  show.py  workspace.py
mlxk2/output/: human.py
mlxk2/tools/: vision_adapter.py
scripts/: benchmark-memmon.sh  check-spec-bump.sh  issue27_harness.sh  list-index-models.sh  push-test-workspace.sh  test-hooks.sh  test-wet-memmom.sh  test-wet-umbrella.sh
tests/: __init__.py  conftest.py
tests/integration/: test_core_functionality.py  test_end_token_issue.py  test_health_checks.py  test_issue_14.py  test_issue_15_16.py  test_lock_cleanup_bug.py  test_process_lifecycle.py  test_real_model_lifecycle.py  test_run_command_advanced.py  test_server_functionality.py
tests/support/: __init__.py  process_guard.py
tests/unit/: test_cache_utils.py  test_cli.py  test_health_multishard.py  test_mlx_runner_memory.py  test_model_card_detection.py
tests_2.0/: __init__.py  conftest.py  conftest_runner.py  show_portfolios.py  test_adr004_error_logging.py  test_audio_cli.py  test_capabilities.py  test_capabilities_invariants.py  test_cli_embed_gate.py  test_cli_embed_serve_gate.py  test_cli_log_json_flag.py  test_cli_push_args.py  test_cli_run_exit_codes.py  test_cli_run_wrapper.py  test_cli_serve_embed_backend_gate.py  test_clone_operation.py  test_convert_multimodal_reject.py  test_convert_repair_index.py  test_ctrl_c_handling.py  test_detection_readme_tokenizer.py  test_edge_cases_adr002.py  test_embed_operation.py  test_embed_proxy_handler.py  test_embed_serve_handler.py  test_embedding_runner.py  test_encoder_pooling.py  test_health_multifile.py  test_health_vision.py  test_human_output.py  test_integration.py  test_interactive_mode.py  test_interruption_recovery.py  test_issue_27.py  test_issue_30_preflight.py  test_issue_37_private_org_regression.py  test_json_api_list.py  test_json_api_show.py  test_legacy_formats.py  test_memory_checks.py.deprecated  test_model_naming.py  (+36 more)
tests_2.0/live/: __init__.py  conftest.py  server_context.py  sse_parser.py  test_audio_e2e_live.py  test_cli_e2e.py  test_cli_pipe_live.py  test_clone_live.py  test_content_hash_v2_live.py  test_embed_encoder_live.py  test_embed_pipe_live.py  test_embed_serve_live.py  test_fim_e2e.py  test_json_smoke.py  test_list_human_live.py  test_pipe_vision_geo.py  test_portfolio_fixtures.py  test_push_live.py  test_serve_embed_proxy_live.py  test_server_e2e.py  test_server_models_workspace_live.py  test_show_portfolio.py  test_streaming_parity.py  test_utils.py  test_vision_e2e_live.py  test_vision_server_e2e.py  test_vm_stat_parsing.py  test_workspace_live.py
tests_2.0/spec/: test_cli_commands_json_flag.py  test_cli_version_output.py  test_code_outputs_validate_against_schema.py  test_push_error_matches_schema.py  test_push_output_matches_schema.py  test_spec_doc_examples_validate.py  test_spec_version_sync.py
(+28 files in other folders)
