[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxk-json"
dynamic = ["version"]
description = "MLX-Knife 2.0 - JSON-first model management for automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "The BROKE team", email = "broke@gmx.eu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "huggingface-hub>=0.34.0",
]

[project.scripts]
mlxk-json = "mlxk2.cli:main"
mlxk2 = "mlxk2.cli:main"

[project.urls]
Homepage = "https://github.com/mzau/mlx-knife"
Repository = "https://github.com/mzau/mlx-knife"
Issues = "https://github.com/mzau/mlx-knife/issues"

[tool.setuptools.packages.find]
include = ["mlxk2*"]
exclude = ["tests*", "tests_2.0*"]

[tool.setuptools.dynamic]
version = {attr = "mlxk2.__version__"}

[project.optional-dependencies]
test = [
    "pytest>=7",
    "jsonschema>=4.20",
    "httpx>=0.27.0",
    "fastapi>=0.116.0",
]

[tool.setuptools]
license-files = [
  "LICENSE",
  "mlxk2/NOTICE",
]
