[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-knife"
dynamic = ["version"]
description = "HuggingFace model management for MLX on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "mlxk2/NOTICE"]
authors = [
    {name = "The BROKE team", email = "broke@gmx.eu"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Environment :: Console",
]
dependencies = [
    # Core
    "huggingface-hub>=1.0.0",
    "requests>=2.32.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    # MLX stack (Text + Vision + Audio).
    # Upper bounds are hygiene per ADR-023: every upstream minor bump gets an
    # explicit compatibility check + release bump, never an implicit upgrade
    # on `pip install`. Loosen only with a new mlx-knife release that has
    # re-verified the integration.
    "mlx>=0.30.0,<0.32",
    "mlx-lm==0.31.3",
    "mlx-audio==0.4.3",
    "mlx-vlm==0.4.4",
    "transformers==5.5.4",
    "tiktoken>=0.7.0,<1.0",
    # TEMPORARY (2.0.6): torch+torchvision required for Pixtral / Llama-Vision /
    # Mistral-Small-3.1 since transformers >=5.5 made the torchvision-backed
    # "Fast" image processor the default class. Without these, mlx-vlm's
    # AutoProcessor.from_pretrained(..., use_fast=True) fails with
    # requires_backends ImportError on Pixtral-class models.
    # Sunset-by mlx-vlm#1011 — once upstream provides use_fast=False fallback,
    # remove these two lines and bump mlx-vlm.
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.scripts]
mlxk = "mlxk2.cli:main"
mlxk-json = "mlxk2.cli:main"
mlxk2 = "mlxk2.cli:main"
mlx-run = "mlxk2.tools.run:main"

[project.urls]
Homepage = "https://github.com/mzau/mlx-knife"
Repository = "https://github.com/mzau/mlx-knife"
Issues = "https://github.com/mzau/mlx-knife/issues"

[tool.setuptools.packages.find]
include = ["mlxk2*"]
exclude = ["tests*", "tests_2.0*"]

[tool.setuptools.dynamic]
version = {attr = "mlxk2.__version__"}

[project.optional-dependencies]
test = [
    "pytest>=7",
    "jsonschema>=4.20",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff.lint.per-file-ignores]
# cli.py: HF_HOME bootstrap (ADR-022) must run before any huggingface imports
"mlxk2/cli.py" = ["E402"]

[tool.setuptools.package-data]
mlxk2 = [
  "assets/whisper/*.tiktoken",
]
